fix #7 added code of conduct

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,5 +7,6 @@ site_description: Online salon client booking and management system
 nav:
     - 'Home': 'index.md'
     - 'Quick-Start Guide': 'quick-start-guide.md'
+    - 'Code of conduct': 'CODE_OF_CONDUCT.md'
 theme:
   name: material
