Updated mkdocs documentation

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM golang:alpine AS build
 
-ENV PROJECT_DIR="/go/src/github.com/deltabrot/clere-coding-challenge-api"
+ENV PROJECT_DIR="/go/src/github.com/deltabrot/salon-booking-guru"
 WORKDIR $PROJECT_DIR
 
 COPY . $PROJECT_DIR
@@ -8,14 +8,14 @@ COPY . $PROJECT_DIR
 RUN go get -d -v ./... && \
     go install -v ./...
 
-RUN go build -o /bin/clere-coding-challenge-api
+RUN go build -o /bin/salon-booking-guru
 
 FROM alpine
 
 WORKDIR /root
 
-COPY --from=build /bin/clere-coding-challenge-api /bin/clere-coding-challenge-api
+COPY --from=build /bin/salon-booking-guru /bin/salon-booking-guru
 
 EXPOSE 8085
 
-CMD /bin/clere-coding-challenge-api
+CMD /bin/salon-booking-guru
