--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -7,4 +7,14 @@ on:
   pull_request:
     branches:
     - main
+jobs:
+  deploy:
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - id: deploy
+      name: Deploy to Dokku
+      uses: idoberko2/dokku-deploy-github-action@v1
 ...
