--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -17,4 +17,9 @@ jobs:
     - id: deploy
       name: Deploy to Dokku
       uses: idoberko2/dokku-deploy-github-action@v1
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        dokku-host: ${{ secrets.DOKKU_APP_HOME }}
+        app-name: ${{ secrets.DOKKU_APP_NAME }}
+        remote-branch: main
 ...
