change to correct dokku hostname

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -19,7 +19,7 @@ jobs:
       uses: idoberko2/dokku-deploy-github-action@v1
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-        dokku-host: ${{ secrets.DOKKU_APP_HOME }}
+        dokku-host: ${{ secrets.DOKKU_HOST }}
         app-name: ${{ secrets.DOKKU_APP_NAME }}
         remote-branch: main
 ...
