correct github action path that contains api dockerfile

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        path: .github/api/
+        path: api/
         fetch-depth: 0
     - id: deploy
       name: Deploy to Dokku
