--- a/.github/workflows/live-preview.yml
+++ b/.github/workflows/live-preview.yml
@@ -42,10 +42,10 @@ jobs:
           eval `ssh-agent -s`
           ssh-add - <<< "$SSH_PRIVATE_KEY"
           echo Creating dokku app ${{ github.event.pull_request.user.login }}-${{ github.head_ref }}
-          ssh dokku@$DOKKU_HOST -C "dokku apps:create ${{ env.SUBDOMAIN }}-${{ github.head_ref }}" | true
+          ssh dokku@$DOKKU_HOST -C "apps:create ${{ env.SUBDOMAIN }}-${{ github.head_ref }}" | true
           echo The url will be ${{ github.event.pull_request.user.login }}-${{ github.head_ref }}.dokku.karmacomputing.co.uk
-          ssh dokku@$DOKKU_HOST -C "dokku git:initialize ${{ env.SUBDOMAIN }}-${{ github.head_ref }}"
-          ssh dokku@$DOKKU_HOST -C "dokku git:set ${{ env.SUBDOMAIN }}-${{ github.head_ref }} deploy-branch ${{ github.head_ref }}"
+          ssh dokku@$DOKKU_HOST -C "git:initialize ${{ env.SUBDOMAIN }}-${{ github.head_ref }}"
+          ssh dokku@$DOKKU_HOST -C "git:set ${{ env.SUBDOMAIN }}-${{ github.head_ref }} deploy-branch ${{ github.head_ref }}"
           # set Stripe test keys as env vars dor dokku/docker
       - uses: actions/checkout@v2
         with:
