fix typo for secrets env variable

--- a/.github/workflows/review-apps.yml
+++ b/.github/workflows/review-apps.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           # create a review app
           command: review-apps:create
-          git_remote_url: 'ssh://dokku@{{ secrets.DOKKU_HOST }}:22/salon-booking-guru'
+          git_remote_url: 'ssh://dokku@${{ secrets.DOKKU_HOST }}:22/salon-booking-guru'
           # specify a name for the review app
           review_app_name: review-appname-${{ github.event.pull_request.number }}
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
