--- a/.github/workflows/review-apps.yml
+++ b/.github/workflows/review-apps.yml
@@ -28,6 +28,24 @@ jobs:
           review_app_name: review-appname-${{ github.event.pull_request.number }}
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - name: Click to see your PR web address
+            env:
+              SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+              DOKKU_HOST: ${{ secrets.DOKKU_HOST }}
+            run: |
+              echo Visit your pr here: http://review-appname-${{ github.event.pull_request.number }}.dokku.karmacomputing.co.uk
+          - name: 'Comment PR with web address of application live preview'
+            uses: actions/github-script@v3
+            if: github.event_name == 'pull_request'
+            with:
+              script: |
+                github.issues.createComment({
+                  issue_number: context.issue.number,
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  body: "🙌 Live preview is here: http://review-appname-${{ github.event.pull_request.number }}.dokku.karmacomputing.co.uk"
+
+
   destroy_review_app:
     runs-on: ubuntu-latest
     # only run when a pull request is closed
