--- a/.github/workflows/deploy-front-end.yml
+++ b/.github/workflows/deploy-front-end.yml
@@ -1,26 +1,30 @@
 ---
-# When a pull request is made to the main branch, deploy an
-# instance of the API
+name: 'Deploy Front-end'
 
-name: Deploy Front-end
+# yamllint disable-line rule:truthy
 on:
-  workflow_dispatch:
   push:
     branches:
-    - main
+      - main
+
 jobs:
   deploy:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - id: deploy
-      name: Deploy to Dokku
-      uses: idoberko2/dokku-deploy-github-action@v1
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-        dokku-host: ${{ secrets.DOKKU_HOST }}
-        app-name: salon-booking-guru-frontend
-        remote-branch: main
-...
+      # third-party action that cancels previous runs
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.4.0
+        with:
+          access_token: ${{ github.token }}
+
+      - name: Cloning repo
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Push to dokku
+        uses: dokku/github-action@v1.0.2
+        with:
+          git_remote_url: 'ssh://dokku@${{ secrets.DOKKU_HOST }}:22/salon-booking-guru'
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          branch: 'main'
