--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
         dokku-host: ${{ secrets.DOKKU_HOST }}
-        app-name: ${{ secrets.DOKKU_APP_NAME }}
+        app-name: api-salon-booking-guru
         remote-branch: main
 ...
