--- a/.github/workflows/docker-publish-api.yml
+++ b/.github/workflows/docker-publish-api.yml
@@ -1,4 +1,4 @@
-name: Build container & push to GitHub container registry
+name: Build & Publish API Container
 
 on:
   schedule:
@@ -13,8 +13,7 @@ on:
 env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
-
+  IMAGE_NAME: karmacomputing/salon-booking-guru-api
 
 jobs:
   build:
