Ref #24 app name api-salon-booking-guru -> salon-booking-guru-api and docs update

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
         dokku-host: ${{ secrets.DOKKU_HOST }}
-        app-name: api-salon-booking-guru
+        app-name: salon-booking-guru-api
         remote-branch: main
 ...
