--- a/.github/workflows/review-apps.yml
+++ b/.github/workflows/review-apps.yml
@@ -24,7 +24,7 @@ jobs:
           git_push_flags: --force
           # create a review app
           command: review-apps:create
-          git_remote_url: 'ssh://dokku@${{ secrets.DOKKU_HOST }}:22/salon-booking-guru'
+          git_remote_url: 'ssh://dokku@${{ secrets.DOKKU_HOST }}:22/salon-booking-guru-api'
           # specify a name for the review app
           review_app_name: review-appname-${{ github.event.pull_request.number }}
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
