--- a/.github/workflows/review-apps.yml
+++ b/.github/workflows/review-apps.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Destroy the review app
         uses: dokku/github-action@master
         with:
-          branch: main
+          #branch: main
           # destroy a review app
           command: review-apps:destroy
           git_remote_url: 'ssh://dokku@${{ secrets.DOKKU_HOST }}:22/salon-booking-guru-front-end'
