--- a/.github/workflows/docker-publish-api.yml
+++ b/.github/workflows/docker-publish-api.yml
@@ -13,6 +13,9 @@ on:
     branches: [ main ]
     paths-ignore:
       - 'docs/**'
+    paths:
+      - 'api/**'
+      - 'front-end/**'
 
 env:
   REGISTRY: ghcr.io
