Fix #126 only build containers when code has changed

--- a/.github/workflows/docker-publish-api.yml
+++ b/.github/workflows/docker-publish-api.yml
@@ -9,6 +9,9 @@ on:
     tags: [ 'v*.*.*' ]
     paths-ignore:
       - 'docs/**'
+    paths:
+      - 'api/**'
+      - 'front-end/**'
   pull_request:
     branches: [ main ]
     paths-ignore:
