--- a/.github/workflows/docker-publish-api.yml
+++ b/.github/workflows/docker-publish-api.yml
@@ -16,9 +16,9 @@ on:
     branches: [ main ]
     paths-ignore:
       - 'docs/**'
-    paths:
-      - 'api/**'
-      - 'front-end/**'
+      - '!api/**'
+      - '!front-end/**'
+
 
 env:
   REGISTRY: ghcr.io
