Fix #126 only build containers when code has changed

--- a/.github/workflows/docker-publish-api.yml
+++ b/.github/workflows/docker-publish-api.yml
@@ -7,16 +7,14 @@ on:
     branches: [ main ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
-    paths-ignore:
-      - 'docs/**'
-      - '!api/**'
-      - '!front-end/**'
+    paths:
+      - 'api/**'
+      - 'front-end/**'
   pull_request:
     branches: [ main ]
-    paths-ignore:
-      - 'docs/**'
-      - '!api/**'
-      - '!front-end/**'
+    paths:
+      - 'api/**'
+      - 'front-end/**'
 
 env:
   REGISTRY: ghcr.io
