Fix #126 only build containers when code has changed

--- a/.github/workflows/docker-publish-front-end.yml
+++ b/.github/workflows/docker-publish-front-end.yml
@@ -7,8 +7,12 @@ on:
     branches: [ main ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
+    paths:
+      - 'front-end/**'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'front-end/**'
 
 env:
   REGISTRY: ghcr.io
