--- a/.github/workflows/deploy-front-end.yml
+++ b/.github/workflows/deploy-front-end.yml
@@ -36,3 +36,14 @@ jobs:
 
       - name: 'app url: http://salon-booking-guru-front-end.dokku.karmacomputing.co.uk'
         run: echo http://salon-booking-guru-front-end.dokku.karmacomputing.co.uk
+
+      - name: 'Comment with live URL'
+        uses: actions/github-script@v3
+        with:
+          script: |
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: "🙌 Live is ready! https://salon-booking-guru-front-end.dokku.karmacomputing.co.uk/"
+            })
