allow smoketest preview with invalid certs

--- a/.github/workflows/live-preview.yml
+++ b/.github/workflows/live-preview.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Smoketest
         run: |
-          curl --fail -H "Content-Type: application/json" -X POST -d '{"email":"jamie@scollay.uk", "password":"password"}' https://review-salon-booking-guru-api-${{ github.event.pull_request.number }}.dokku.karmacomputing.co.uk/v1/authenticate
+          curl -k --fail -H "Content-Type: application/json" -X POST -d '{"email":"jamie@scollay.uk", "password":"password"}' https://review-salon-booking-guru-api-${{ github.event.pull_request.number }}.dokku.karmacomputing.co.uk/v1/authenticate
 
       - name: 'Comment PR with preview URL'
         uses: actions/github-script@v3
