--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -28,4 +28,4 @@ jobs:
 
     - name: Smoketest
       run: |
-        curl --fail -H "Content-Type: application/json" -X POST -d '{"email":"jamie@scollay.uk", "password":"password"}' https://salon-booking-guru-api.dokku.karmacomputing.co.uk/v1/authenticate
+        curl -k --fail -H "Content-Type: application/json" -X POST -d '{"email":"jamie@scollay.uk", "password":"password"}' https://salon-booking-guru-api.dokku.karmacomputing.co.uk/v1/authenticate
