Hooked up accounts api and stopped using dummy data. Began working on account editor

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.3",
     "core-js": "^3.6.5",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
